Edited some files needed to build qt5 hello world.

--- a/qt5-lab/Makefile
+++ b/qt5-lab/Makefile
@@ -1,6 +1,8 @@
+export QTDIR=/opt/qt5
 all:
 	mkdir -p build
-	cd build && make 2>err
+	cd build && cmake .. && make 2>err
+	
 err:
 	vim build/err
 clean:
