--- a/qt5-lab/CMakeLists.txt
+++ b/qt5-lab/CMakeLists.txt
@@ -1,27 +1,31 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 PROJECT(HelloWorldQt)
+
+SET(QT5_DIR /opt/qt5)
+
+SET(CMAKE_MODULE_PATH ${QT5_DIR}/Modules)
  
 SET(CMAKE_BUILD_TYPE Release)
  
 SET(CMAKE_CXX_FLAGS "-Wall")
  
 # QT4 Handling
-FIND_PACKAGE(Qt4 REQUIRED)
+FIND_PACKAGE(Qt5 REQUIRED)
  
 INCLUDE(${QT_USE_FILE})
  
-SET( HWQ_Qt4_SRC
+SET( HWQ_Qt5_SRC
 	MainWindow.h
 	HelloWidget.h
 )
-SET( HWQ_Qt4_UI
+SET( HWQ_Qt5_UI
 )
-SET( HWQ_Qt4_RES
+SET( HWQ_Qt5_RES
 )
  
-QT4_WRAP_CPP(HWQ_MOC_CPP ${HWQ_Qt4_SRC})
-QT4_WRAP_UI(HWQ_UI_CPP ${HWQ_Qt4_UI})
-QT4_ADD_RESOURCES(HWQ_RES_H ${HWQ_Qt4_RES})
+QT5_WRAP_CPP(HWQ_MOC_CPP ${HWQ_Qt5_SRC})
+QT5_WRAP_UI(HWQ_UI_CPP ${HWQ_Qt5_UI})
+QT5_ADD_RESOURCES(HWQ_RES_H ${HWQ_Qt5_RES})
  
 INCLUDE_DIRECTORIES( . )
  
